--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Login.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model NGnono.FinancialManagement.WebSiteCore.Models.LoginModel
+﻿@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.LoginModel
 
 @{
     ViewBag.Title = "登录";
