--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/ChangePassword.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model NGnono.FinancialManagement.WebSiteCore.Models.ChangePasswordModel
+﻿@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.ChangePasswordModel
 
 @{
     ViewBag.Title = "更改密码";
