--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Index.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.LoginModel
+﻿@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.LoginViewModel
 
 @{
     ViewBag.Title = "您的帐户";
