--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Login.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.LoginModel
+﻿@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.LoginViewModel
 
 @{
     ViewBag.Title = "登录";
@@ -28,11 +28,6 @@
         <li data-role="fieldcontain">
             @Html.LabelFor(m => m.Password)
             @Html.PasswordFor(m => m.Password)
-        </li>
-
-        <li data-role="fieldcontain">
-            @Html.LabelFor(m => m.RememberMe)
-            @Html.CheckBoxFor(m => m.RememberMe)
         </li>
 
         <li data-role="fieldcontain">
