--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_JqMLayout.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_JqMLayout.cshtml
@@ -10,6 +10,7 @@
     @RenderSection("HeaderStyles", false)
     <script src="@Url.Content("~/js/base/jquery.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/js/widgets/jquery.mobile-1.3.0.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/js/widgets/cordova.webos.js")" type="text/javascript"></script>
 
     @RenderSection("HeaderScripts", false)
 
@@ -19,8 +20,8 @@
         <![endif]-->
 </head>
 <body>
-    <div data-role="page">
-        <div data-role="header">
+    <div data-role="page" id="home">
+        <div data-role="header" id="homeHeader">
             @if (IsSectionDefined("Header"))
             {
                 @RenderSection("Header")
@@ -31,11 +32,11 @@
                 @Html.Partial("_LoginPartial")
             }
         </div>
-        <div data-role="content">
+        <div data-role="content" id="homeContent">
             @RenderBody()
         </div>
 
-        <div data-role="footer">
+        <div data-role="footer" id="homeFooter">
             @if (IsSectionDefined("Footer"))
             {
                 @RenderSection("Footer")
@@ -46,6 +47,8 @@
             }
         </div>
     </div>
+    @RenderSection("PageAreas", false)
+
     @RenderSection("FooterScripts", false)
 </body>
 </html>
