--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Bill/Index.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Bill/Index.cshtml
@@ -14,7 +14,7 @@
     </li>
 </ul>
 
-<a data-role="button" href="#page1">记帐
+<a data-role="button" href="@Url.Action("Create","Bill")">记帐
 </a>
 
 <ul data-role="listview" data-split-icon="arrow-r" data-inset="true">
