--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Home/Index.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Home/Index.cshtml
@@ -11,4 +11,5 @@
     <li data-role="list-divider">导航</li>
     <li>@Html.ActionLink("关于", "About", "Home")</li>
     <li>@Html.ActionLink("联系方式", "Contact", "Home")</li>
+    <li>@Html.ActionLink("账单", "Index", "Bill")</li>
 </ul>
