--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_JqMLayout.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_JqMLayout.cshtml
@@ -11,6 +11,10 @@
     <script src="@Url.Content("~/js/base/jquery.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/js/widgets/jquery.mobile-1.3.0.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/js/widgets/cordova.webos.js")" type="text/javascript"></script>
+    
+    <script src="@Url.Content("~/js/c/device.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/js/c/camera.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/js/c/storage.js")" type="text/javascript"></script>
 
     @RenderSection("HeaderScripts", false)
 
