--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Register.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.RegisterModel
+﻿@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.RegisterViewModel
 
 @{
     ViewBag.Title = "注册";
