--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Login.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section Header {
-    @Html.ActionLink("取消", "Index", "Home", null, new { data_icon = "arrow-l", data_rel = "back" })
+    @Html.ActionLink("返回", "Index", "Home", null, new { data_icon = "arrow-l", data_rel = "back" })
     <h1>@ViewBag.Title</h1>
 }
 
