--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Home/Index.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Home/Index.cshtml
@@ -12,4 +12,5 @@
     <li>@Html.ActionLink("关于", "About", "Home")</li>
     <li>@Html.ActionLink("联系方式", "Contact", "Home")</li>
     <li>@Html.ActionLink("账单", "Index", "Bill")</li>
+    <li>@Html.ActionLink("商品", "Index", "Product")</li>
 </ul>
