--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.Data/CodeTemplates/ReverseEngineerCodeFirst/Mapping.tt
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.Data/CodeTemplates/ReverseEngineerCodeFirst/Mapping.tt
@@ -30,7 +30,7 @@ using System.Data.Entity.ModelConfiguration;
 
 namespace <#= code.EscapeNamespace(efHost.Namespace) #>
 {
-    public class <#= efHost.EntityType.Name #>EntityMap : EntityTypeConfiguration<<#= efHost.EntityType.Name #>Entity>
+    public partial class <#= efHost.EntityType.Name #>EntityMap : EntityTypeConfiguration<<#= efHost.EntityType.Name #>Entity>
     {
         public <#= efHost.EntityType.Name #>EntityMap()
         {
@@ -263,6 +263,9 @@ namespace <#= code.EscapeNamespace(efHost.Namespace) #>
 <#
         }
 #>
+		Init();
         }
+
+		partial void Init();
     }
 }
