--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Register.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.RegisterViewModel
+﻿@using NGnono.FinancialManagement.WebSiteCore.Models.Vo
+@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.RegisterViewModel
 
 @{
     ViewBag.Title = "注册";
@@ -8,7 +9,8 @@
     密码必须至少包含 6 个字符。
 </p>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.ValidationSummary()
 
     <ul data-role="listview" data-inset="true">
@@ -16,22 +18,27 @@
 
         <li data-role="fieldcontain">
             @Html.LabelFor(m => m.UserName)
-            @Html.TextBoxFor(m => m.UserName)            
+            @Html.TextBoxFor(m => m.UserName)
         </li>
 
         <li data-role="fieldcontain">
             @Html.LabelFor(m => m.Email)
-            @Html.TextBoxFor(m => m.Email)            
+            @Html.TextBoxFor(m => m.Email)
+        </li>
+
+        <li data-role="fieldcontain">
+            @Html.LabelFor(m => m.Nickname)
+            @Html.TextBoxFor(m => m.Nickname)
         </li>
 
         <li data-role="fieldcontain">
             @Html.LabelFor(m => m.Password)
-            @Html.PasswordFor(m => m.Password)            
+            @Html.PasswordFor(m => m.Password)
         </li>
 
         <li data-role="fieldcontain">
             @Html.LabelFor(m => m.ConfirmPassword)
-            @Html.PasswordFor(m => m.ConfirmPassword)            
+            @Html.PasswordFor(m => m.ConfirmPassword)
         </li>
 
         <li data-role="fieldcontain">
@@ -40,6 +47,9 @@
     </ul>
 }
 
+@section Header {
+    @Html.Partial("_StdHeaderPartial", new StdHeaderViewModel { Title = ViewBag.Title })
+}
 @section HeaderScripts
 {
     <script src="@Url.Content("~/js/widgets/jquery.validate.min.js")" type="text/javascript"></script>
