--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_LoginPartial.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,8 @@
-﻿@if(Request.IsAuthenticated) {
+﻿@if (Request.IsAuthenticated)
+{
     @Html.ActionLink(User.Identity.Name, "Index", "Account", routeValues: null, htmlAttributes: new { data_icon = "gear" })
 }
-else {
-    @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { data_icon = "gear" })
+else
+{
+    @Html.ActionLink("登录", "Login", "Account", routeValues: null, htmlAttributes: new { data_icon = "gear" })
 }
