--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_StdHeaderPartial.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_StdHeaderPartial.cshtml
@@ -1,11 +1,14 @@
-﻿@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.StdHeaderViewModel
+﻿@using NGnono.FinancialManagement.WebSupport.Auth
+@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.StdHeaderViewModel
 
 @Html.ActionLink("返回", "Index", "Home", null, new { data_icon = "arrow-l", data_rel = "back" })
 <h1>@this.Model.Title</h1>
 
 @if (Request.IsAuthenticated)
 {
-    @Html.ActionLink(User.Identity.Name, "Index", "Account", routeValues: null, htmlAttributes: new { data_icon = "gear" })
+    var u = NGnono.Framework.ServiceLocation.ServiceLocator.Current.Resolve<IAuthenticationService>().GetCurrentUser(Context);
+    
+    @Html.ActionLink(u.ShowName, "Index", "Account", routeValues: null, htmlAttributes: new { data_icon = "gear" })
 }
 else
 {
