--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Bill/Details.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Bill/Details.cshtml
@@ -1,6 +1,5 @@
 ﻿@using NGnono.FinancialManagement.WebSiteCore.Models.Vo
-@model NGnono.FinancialManagement.WebSiteCore.Models.Dto.Bill.CreateDto
-
+@model NGnono.FinancialManagement.Data.Models.BillEntity
 
 @{
     ViewBag.Title = "记账";
