--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Bill/Create.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Bill/Create.cshtml
@@ -19,13 +19,13 @@
     <ul data-role="listview" data-divider-theme="a" data-inset="true">
         <li>
             <fieldset data-role="controlgroup" data-type="horizontal">
-               
-                <input type="radio" name="type1" id="chb_mode_2" value="2" checked="checked" onclick="$('#type').val(2)" />
+
+                <input type="radio" name="type1" id="chb_mode_2" value="2" checked="checked" onclick="$('#type').val(2); " />
                 <label for="chb_mode_2">收入</label>
-                <input type="radio" name="type1" id="chb_mode_1" value="1" onclick="$('#type').val(1)"/>
+                <input type="radio" name="type1" id="chb_mode_1" value="1" onclick="$('#type').val(1);" />
                 <label for="chb_mode_1">支出</label>
-                
-                @Html.HiddenFor(m => m.Vo.Type, new { id = "type" , value="2" })
+
+                @Html.HiddenFor(m => m.Vo.Type, new { id = "type" })
             </fieldset>
         </li>
     </ul>
@@ -44,8 +44,7 @@
 
         <li data-role="list-divider">日期</li>
         <li>
-            @Html.HiddenFor(m => m.Vo.DataDateTime, new { @class = "i-txt" ,id="con_dataDateTime"})
-@*            <input class="i-txt" id="con_dataDateTime" name="dataDateTime" />*@
+            @Html.HiddenFor(m => m.Vo.DataDateTime, new { @class = "i-txt", id = "dataDateTime" })
         </li>
         <li>
             @Html.LabelFor(m => m.Vo.Description)
@@ -95,28 +94,60 @@
 
 @section HeaderStyles
 {
-    <link href="@Url.Content("~/css/mobiscroll.custom-2.5.0.min.css")" rel="stylesheet" type="text/css" />
+
 }
 @section HeaderScripts
 {
-    <script src="@Url.Content("~/js/widgets/jquery.validate.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/js/widgets/mobiscroll.custom-2.5.0.min.js")" type="text/javascript"></script>
+
 }
 
 @section FooterScripts
 {
     <script type="text/javascript">
-        $(function () {
-            $('#con_dataDateTime').mobiscroll().date({
-                invalid: { daysOfWeek: [0, 6], daysOfMonth: ['5/1', '12/24', '12/25'] },
-                theme: 'jqm',
-                display: 'inline',
-                mode: 'scroller',
-                dateOrder: 'mmD ddyy'
+        $(document).ready(pinit);
+
+        $('#dataDateTime').mobiscroll().date({
+            invalid: { daysOfWeek: [0, 6], daysOfMonth: ['5/1', '12/24', '12/25'] },
+            theme: 'jqm',
+            display: 'inline',
+            mode: 'scroller',
+            dateOrder: 'mmD ddyy'
+        });
+        
+        s();
+        function s() {
+            $('#dataDateTime').mobiscroll('show');
+        }
+
+        function pinit() {
+
+            var val = $('input:radio[name="type1"]:checked').val();
+            if (val == null) {
+                alert("什么也没选中!");
+                return false;
+            }
+
+            $('#type').val(val);
+
+            $('#dataDateTime').mobiscroll('setValue', '@DateTime.Now.ToString("MM/dd/yyyy")', true);
+            $('#dataDateTime').val('@DateTime.Now.ToString("MM/dd/yyyy")');
+
+
+
+            //为页面添加swip 事件
+            $('#home').on("pageinit", function () {
+                //当我们向左滑动的时候,进入setting页面 
+                $('#link_tag').on("client", function () {
+                    $.mobile.changePage('#tagSetting', { transition: "fade" });
+                });
+
             });
 
-            $('#con_dataDateTime').mobiscroll('setValue', '@DateTime.Now.ToString("MM/dd/yyyy")', true);
-        });
+            //当我们向右滑动的时候,回到主页 
+            $('#tagSetting').on("swipeleft", function () {
+                $.mobile.changePage('#home', { transition: "fade" });
+            });
+        }
 
 
         function bindTag(tagId, tagName) {
@@ -138,19 +169,7 @@
 
         //在页面初始化的时候,利用phonegap初始化我们的应用 
 
-        //为页面添加swip 事件
-        $('#home').on("pageinit", function () {
-            //当我们向左滑动的时候,进入setting页面 
-            $('#link_tag').on("client", function () {
-                $.mobile.changePage('#tagSetting', { transition: "fade" });
-            });
 
-        });
-
-        //当我们向右滑动的时候,回到主页 
-        $('#tagSetting').on("swipeleft", function () {
-            $.mobile.changePage('#home', { transition: "fade" });
-        });
 
     </script>
 }
