--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Bill/Update.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Bill/Update.cshtml
@@ -12,23 +12,28 @@
 })
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Update", "Bill", FormMethod.Post))
 {
+    @Html.HiddenFor(m => m.BillUpdateViewModel.Id)
+    @Html.Hidden("billid", this.Model.BillUpdateViewModel.Id)
     @Html.ValidationSummary()
     <ul data-role="listview" data-divider-theme="a" data-inset="true">
         <li>
             <fieldset data-role="controlgroup" data-type="horizontal">
 
-                <input type="radio" name="type1" id="chb_mode_2" value="2" onclick="$('#type').val(2)" />
+                <input type="radio" name="type1" id="chb_mode_2" value="2" @if (this.Model.BillUpdateViewModel.Type == 2)
+                                                                           {
+                                                                               Response.Write("checked=\"checked\"");
+                                                                           } onclick="$('#type').val(2)" />
                 <label for="chb_mode_2">收入</label>
-                <input type="radio" name="type1" id="chb_mode_1" value="1" onclick="$('#type').val(1)" />
+                <input type="radio" name="type1" id="chb_mode_1" value="1" @if (this.Model.BillUpdateViewModel.Type == 1)
+                                                                           {
+                                                                               Response.Write("checked=\"checked\"");
+                                                                           } onclick="$('#type').val(1)" />
                 <label for="chb_mode_1">支出</label>
 
-                <script type="text/javascript">
-                    $('#chb_mode_@this.Model.Type').attr('checked', 'checked');
-                </script>
 
-                @Html.HiddenFor(m => m.Bill.Type, new { id = "type", value = this.Model.Bill.Type })
+                @Html.HiddenFor(m => m.BillUpdateViewModel.Type)
             </fieldset>
         </li>
     </ul>
@@ -37,26 +42,27 @@
         <li data-role="list-divider">分类</li>
         <li>
             <a id="link_tag" href="#tagSetting" data-transition="pop">@this.Model.Bill.Tag.Name</a>
-            @Html.HiddenFor(m => m.Bill.Tag_Id, new { id = "tag", value = this.Model.Bill.Tag_Id })
+            @Html.HiddenFor(m => m.BillUpdateViewModel.Tag_Id, new { id = "tag" })
         </li>
         <li data-role="list-divider">详细信息</li>
         <li>
-            @Html.LabelFor(m => m.Bill.Amount)
-            @Html.TextBoxFor(m => m.Bill.Amount)
+            <label for="amount">金额</label>
+
+            @Html.TextBoxFor(m => m.BillUpdateViewModel.Amount, new { id = "amount" })
         </li>
 
-        <li data-role="list-divider">日期</li>
+        <li data-role="list-divider" onclick="d();">日期</li>
         <li>
-            @Html.HiddenFor(m => m.Bill.DataDateTime, new { @class = "i-txt", id = "con_dataDateTime" })
+            @Html.HiddenFor(m => m.BillUpdateViewModel.DataDateTime, new { @class = "i-txt", id = "dataDateTime" ,@value=this.Model.BillUpdateViewModel.DataDateTime.ToString("MM/dd/yyyy")})
             @*            <input class="i-txt" id="con_dataDateTime" name="dataDateTime" />*@
         </li>
         <li>
-            @Html.LabelFor(m => m.Bill.Description)
-            @Html.TextBoxFor(m => m.Bill.Description)
+            <label for="description"></label>
+            @Html.TextBoxFor(m => m.BillUpdateViewModel.Description)
         </li>
 
         <li data-role="fieldcontain">
-            <input type="submit" value="保存" />
+            <input type="submit" value="保存"  />
         </li>
     </ul>
 }
@@ -96,30 +102,51 @@
     </div>
 }
 
-@section HeaderStyles
-{
-    <link href="@Url.Content("~/css/mobiscroll.custom-2.5.0.min.css")" rel="stylesheet" type="text/css" />
-}
-@section HeaderScripts
-{
-    <script src="@Url.Content("~/js/widgets/jquery.validate.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/js/widgets/mobiscroll.custom-2.5.0.min.js")" type="text/javascript"></script>
-}
-
 @section FooterScripts
 {
     <script type="text/javascript">
-        $(function () {
-            $('#con_dataDateTime').mobiscroll().date({
+        $('#chb_mode_@this.Model.BillUpdateViewModel.Type').attr('checked', 'checked');
+     
+        $(document).ready(pinit);
+
+        d();
+        function d() {
+            $('#dataDateTime').mobiscroll().date({
                 invalid: { daysOfWeek: [0, 6], daysOfMonth: ['5/1', '12/24', '12/25'] },
                 theme: 'jqm',
                 display: 'inline',
                 mode: 'scroller',
                 dateOrder: 'mmD ddyy'
             });
+        }
 
-            $('#con_dataDateTime').mobiscroll('setValue', '@this.Model.Bill.DataDateTime.ToString("MM/dd/yyyy")', true);
-        });
+        function pinit() {
+
+            @*            $('#con_dataDateTime').mobiscroll('setValue', '@this.Model.Bill.DataDateTime.ToString("MM/dd/yyyy")', true);*@
+
+
+            $('#dataDateTime').mobiscroll('setValue', '@this.Model.BillUpdateViewModel.DataDateTime.ToString("MM/dd/yyyy")', false);
+
+            $('#dataDateTime').mobiscroll('show');
+
+
+
+            //在页面初始化的时候,利用phonegap初始化我们的应用 
+
+            //为页面添加swip 事件
+            $('#home').on("pageinit", function () {
+                //当我们向左滑动的时候,进入setting页面 
+                $('#link_tag').on("client", function () {
+                    $.mobile.changePage('#tagSetting', { transition: "fade" });
+                });
+
+            });
+
+            //当我们向右滑动的时候,回到主页 
+            $('#tagSetting').on("swipeleft", function () {
+                $.mobile.changePage('#home', { transition: "fade" });
+            });
+        }
 
 
         function bindTag(tagId, tagName) {
@@ -138,22 +165,6 @@
         function backHome() {
             $.mobile.changePage('#home', { transition: "fade" });
         }
-
-        //在页面初始化的时候,利用phonegap初始化我们的应用 
-
-        //为页面添加swip 事件
-        $('#home').on("pageinit", function () {
-            //当我们向左滑动的时候,进入setting页面 
-            $('#link_tag').on("client", function () {
-                $.mobile.changePage('#tagSetting', { transition: "fade" });
-            });
-
-        });
-
-        //当我们向右滑动的时候,回到主页 
-        $('#tagSetting').on("swipeleft", function () {
-            $.mobile.changePage('#home', { transition: "fade" });
-        });
 
     </script>
 }
