--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.Data/CodeTemplates/ReverseEngineerCodeFirst/Context.tt
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.Data/CodeTemplates/ReverseEngineerCodeFirst/Context.tt
@@ -157,9 +157,22 @@ namespace <#= code.EscapeNamespace(efHost.Namespace) #>
 
 		public override int SaveChanges()
 		{
-			var c =  base.SaveChanges();
+ try
+            {
+                return base.SaveChanges();
+            }
+            catch (Exception ex)
+            {
+                Exception t = ex;
+                while (ex != null)
+                {
+                    _log.Error(ex);
+                    t = ex;
+                    ex = ex.InnerException;
+                }
 
-			return c;
+                throw t;
+            }
 		}
 
 		protected override void Dispose(bool disposing)
