--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_DefHeaderPartial.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_DefHeaderPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using NGnono.FinancialManagement.WebSupport.Auth
-@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.StdHeaderViewModel
+@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.DefHeaderViewModel
 
 @Html.ActionLink("返回", "Index", "Home", null, new { data_icon = "arrow-l", data_rel = "back" })
 <h1>@this.Model.Title</h1>
