--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_JqMLayout.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_JqMLayout.cshtml
@@ -8,12 +8,19 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="@Url.Content("~/css/jqm/themes/default/jquery.mobile-1.3.0.min.css")" rel="stylesheet" type="text/css"/>
     <link href="@Url.Content("~/css/mobiscroll.custom-2.5.0.min.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/css/jquery.mobile.pagination.css")" rel="stylesheet" type="text/css" />
+
 
     @RenderSection("HeaderStyles", false)
     <script src="@Url.Content("~/js/base/jquery.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/js/widgets/jquery.mobile-1.3.0.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/js/widgets/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/js/widgets/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+
     <script src="@Url.Content("~/js/widgets/mobiscroll.custom-2.5.0.min.js")" type="text/javascript"></script>
+
+    <script src="@Url.Content("~/js/widgets/jquery.mobile.pagination.js")" type="text/javascript"></script>
+
 
     @RenderSection("HeaderScripts", false)
 
