--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Product/Create.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Product/Create.cshtml
@@ -80,7 +80,7 @@
     function pinit() {
 
         $('#dataDateTime').mobiscroll().date({
-            invalid: { daysOfWeek: [0, 6], daysOfMonth: ['5/1', '12/24', '12/25'] },
+            //invalid: { daysOfWeek: [0, 6], daysOfMonth: ['5/1', '12/24', '12/25'] },
             theme: 'jqm',
             display: 'inline',
             mode: 'scroller',
