--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_JqMLayout.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Shared/_JqMLayout.cshtml
@@ -27,7 +27,37 @@
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
+    <![endif]-->
+
+    <script type="text/javascript">
+        var geo = '';
+        function getCoordinate() {
+
+            var geolocation = new BMap.Geolocation();
+            geolocation.getCurrentPosition(function (r) {
+                if (this.getStatus() == BMAP_STATUS_SUCCESS) {
+                    var mk = new BMap.Marker(r.point);
+                    map.addOverlay(mk);
+                    map.panTo(r.point);
+                    geo = r.point.lng + ',' + r.point.lat;
+                } else {
+                    alert('failed' + this.getStatus());
+                }
+            }, { enableHighAccuracy: true });
+
+            //关于状态码
+            //BMAP_STATUS_SUCCESS	检索成功。对应数值“0”。
+            //BMAP_STATUS_CITY_LIST	城市列表。对应数值“1”。
+            //BMAP_STATUS_UNKNOWN_LOCATION	位置结果未知。对应数值“2”。
+            //BMAP_STATUS_UNKNOWN_ROUTE	导航结果未知。对应数值“3”。
+            //BMAP_STATUS_INVALID_KEY	非法密钥。对应数值“4”。
+            //BMAP_STATUS_INVALID_REQUEST	非法请求。对应数值“5”。
+            //BMAP_STATUS_PERMISSION_DENIED	没有权限。对应数值“6”。(自 1.1 新增)
+            //BMAP_STATUS_SERVICE_UNAVAILABLE	服务不可用。对应数值“7”。(自 1.1 新增)
+            //BMAP_STATUS_TIMEOUT	超时。对应数值“8”。(自 1.1 新增)
+
+        }
+    </script>
 </head>
 <body>
     <div data-role="page" id="home">
@@ -59,6 +89,8 @@
     </div>
     @RenderSection("PageAreas", false)
     @RenderSection("FooterScripts", false)
+
+
 </body>
 </html>
 
