--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Store/Create.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Store/Create.cshtml
@@ -1,8 +1,8 @@
 ﻿@using NGnono.FinancialManagement.WebSiteCore.Models.Vo
-@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.TagCreateViewModel
+@model NGnono.FinancialManagement.WebSiteCore.Models.Vo.CreateStoreViewModel
 
 @{
-    ViewBag.Title = "添加分类";
+    ViewBag.Title = "添加商户";
 }
 
 @using (Html.BeginForm())
@@ -18,9 +18,34 @@
         </li>
 
         <li data-role="fieldcontain">
+            @Html.LabelFor(m => m.Description)
+            @Html.TextBoxFor(m => m.Description)
+        </li>
+
+        <li data-role="fieldcontain">
+            @Html.LabelFor(m => m.Tel)
+            @Html.TextBoxFor(m => m.Tel)
+        </li>
+
+        <li data-role="fieldcontain">
+            @Html.LabelFor(m => m.Location)
+            @Html.TextBoxFor(m => m.Location)
+        </li>
+
+
+        <li data-role="fieldcontain">
             <input type="submit" value="添加" />
         </li>
     </ul>
+    <div id="l-map"></div>
+    <div id="r-result"></div>
+
+    <div id="r-result2">
+    </div>
+
+
+    @Html.HiddenFor(m => m.Latitude, new { id = "lat" })
+    @Html.HiddenFor(m => m.Longitude, new { id = "lng" })
 }
 
 
@@ -29,7 +54,95 @@
 }
 @section HeaderScripts
 {
-    <script src="@Url.Content("~/js/widgets/jquery.validate.min.js")" type="text/javascript"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.5&ak=50bebc60934e9a21caaacc8e24a2bec3"></script>
 }
 @section FooterScripts {
+    <script type="text/javascript">
+
+        function showInfo(e) {
+            alert(e);
+        }
+       $(document).on("pageinit", sinit);
+
+        function sinit() {
+            var map = new BMap.Map("l-map");            // 创建Map实例
+            var point = new BMap.Point(116.404, 39.915);    // 创建点坐标
+            map.centerAndZoom(point, 15);                     // 初始化地图,设置中心点坐标和地图级别。
+            map.enableScrollWheelZoom();                            //启用滚轮放大缩小
+            //$('#l-map').show();
+
+           // $('#l-map').listview("refresh");;
+            //$('#r-result').hide();
+            //$('#r-result2').hide();
+
+            //var lat, lng;
+            //if (geo != '') {
+            //    $('#r-result').show();
+            //    lng = c.split(',')[0];
+            //    lat = c.split(',')[1];
+            //    showMap(lng, lat);
+            //} else {
+            //    $('#r-result2').show();
+            //    showMap2();
+            //}
+        }
+
+        function showMap(lng, lat) {
+            var map = new BMap.Map("l-map");
+            // 创建Map实例
+            var point = new BMap.Point(lng, lat);
+            // 创建点坐标
+            map.centerAndZoom(point, 15);
+            // 初始化地图,设置中心点坐标和地图级别。
+            map.enableScrollWheelZoom();
+            //启用滚轮放大缩小
+
+            map.addEventListener("click", showInfo);
+            
+            $('#l-map').listview('refresh');
+        }
+
+        function showMap2() {
+            var map = new BMap.Map("l-map");            // 创建Map实例
+            map.centerAndZoom(new BMap.Point(116.404, 39.915), 4);
+
+            var local = new BMap.LocalSearch("全国", {
+                renderOptions: {
+                    map: map,
+                    panel: "r-result2",
+                    autoViewport: true,
+                    selectFirstResult: false
+                }
+            });
+            map.addEventListener("click", showInfo);
+            local.search("南京路");
+        }
+
+        function G(id) {
+            return document.getElementById(id);
+        }
+
+        function setPlace() {
+            map.clearOverlays(); //清除地图上所有覆盖物
+
+            function myFun() {
+                var pp = local.getResults().getPoi(0).point; //获取第一个智能搜索的结果
+                map.centerAndZoom(pp, 18);
+                map.addOverlay(new BMap.Marker(pp)); //添加标注
+            }
+
+            var local = new BMap.LocalSearch(map, {
+                //智能搜索
+                onSearchComplete: myFun
+            });
+            local.search(myValue);
+        }
+
+        function showInfo(e) {
+            $('#lng').val(e.point.lng);
+            $('#lat').val(e.point.lat);
+        }
+
+
+    </script>
 }
