--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Home/About.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Home/About.cshtml
@@ -14,3 +14,27 @@
     <li>@Html.ActionLink("主页", "Index", "Home")</li>
     <li>@Html.ActionLink("联系方式", "Contact", "Home")</li>
 </ul>
+
+
+
+@section HeaderScripts
+{
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.5&ak=50bebc60934e9a21caaacc8e24a2bec3"></script>
+}
+@section FooterScripts {
+    <script type="text/javascript">
+
+
+        var map = new BMap.Map("allmap");
+// 创建Map实例
+        var point = new BMap.Point(116.404, 39.915);
+// 创建点坐标
+        map.centerAndZoom(point, 15);
+// 初始化地图,设置中心点坐标和地图级别。
+        map.enableScrollWheelZoom();
+        //启用滚轮放大缩小
+
+
+    </script>
+
+}
