--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Store/Create.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Store/Create.cshtml
@@ -37,7 +37,7 @@
             <input type="submit" value="添加" />
         </li>
     </ul>
-    <div id="l-map"></div>
+    <div id="l-map" style="width:100%;height:320px"></div>
     <div id="r-result"></div>
 
     <div id="r-result2">
@@ -64,27 +64,21 @@
         }
        $(document).on("pageinit", sinit);
 
-        function sinit() {
-            var map = new BMap.Map("l-map");            // 创建Map实例
-            var point = new BMap.Point(116.404, 39.915);    // 创建点坐标
-            map.centerAndZoom(point, 15);                     // 初始化地图,设置中心点坐标和地图级别。
-            map.enableScrollWheelZoom();                            //启用滚轮放大缩小
-            //$('#l-map').show();
+       function sinit() {
+           getCoordinate();
+            $('#r-result').hide();
+            $('#r-result2').hide();
 
-           // $('#l-map').listview("refresh");;
-            //$('#r-result').hide();
-            //$('#r-result2').hide();
-
-            //var lat, lng;
-            //if (geo != '') {
-            //    $('#r-result').show();
-            //    lng = c.split(',')[0];
-            //    lat = c.split(',')[1];
-            //    showMap(lng, lat);
-            //} else {
-            //    $('#r-result2').show();
-            //    showMap2();
-            //}
+            var lat, lng;
+            if (geo != '') {
+                $('#r-result').show();
+                lng = c.split(',')[0];
+                lat = c.split(',')[1];
+                showMap(lng, lat);
+            } else {
+                $('#r-result2').show();
+                showMap2();
+            }
         }
 
         function showMap(lng, lat) {
