--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Product/MyIndex.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Product/MyIndex.cshtml
@@ -10,7 +10,7 @@
 @section Header {
     @Html.ActionLink("返回", "Index", "Home", null, new { data_icon = "arrow-l", data_rel = "back" })
     <h1>@ViewBag.Title</h1>
-    @Html.ActionLink("创建", "Create", "Product")
+    <a href="@Url.Action("Create", "Product")" data-ajax="false">创建</a>
 }
 
 
