--- a/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Store/Create.cshtml
+++ b/NGnono.FinancialManagement/NGnono.FinancialManagement.WebSite4Mobile/Views/Store/Create.cshtml
@@ -32,16 +32,22 @@
             @Html.TextBoxFor(m => m.Location)
         </li>
 
+        <li>
+            <label>坐标</label>
+            <input type="text" id="zuobiao" />
+        </li>
+        <li>
+            <div id="l-map" style="width: 100%; height: 320px"></div>
+            <div id="r-result"></div>
 
+            <div id="r-result2">
+            </div>
+        </li>
         <li data-role="fieldcontain">
             <input type="submit" value="添加" />
         </li>
     </ul>
-    <div id="l-map" style="width:100%;height:320px"></div>
-    <div id="r-result"></div>
 
-    <div id="r-result2">
-    </div>
 
 
     @Html.HiddenFor(m => m.Latitude, new { id = "lat" })
@@ -57,32 +63,58 @@
     <script type="text/javascript" src="http://api.map.baidu.com/api?v=1.5&ak=50bebc60934e9a21caaacc8e24a2bec3"></script>
 }
 @section FooterScripts {
+
     <script type="text/javascript">
+        var map;
+        function getCoordinate() {
+            var geolocation = new BMap.Geolocation();
+
+            geolocation.getCurrentPosition(function (r) {
+                if (this.getStatus() == BMAP_STATUS_SUCCESS) {
+                    var mk = new BMap.Marker(r.point);
+                    //map = new BMap.Map("l-map");
+                    map.addOverlay(mk);
+                    map.panTo(r.point);
+                    var geo = r.point.lng + ',' + r.point.lat;
+
+                    $('#r-result').show();
+                    var lng = r.point.lng;
+                    var lat = r.point.lat;
+                    showMap(lng, lat);
+                } else {
+                    alert('failed' + this.getStatus());
+                    $('#r-result2').show();
+                    showMap2();
+
+                }
+            }, { enableHighAccuracy: true });
+
+
+        }
 
         function showInfo(e) {
             alert(e);
         }
-       $(document).on("pageinit", sinit);
 
-       function sinit() {
-           getCoordinate();
+        $(document).on("pageinit", sinit);
+
+        function errorGeoRun() {
+            alert("没有找到");
             $('#r-result').hide();
             $('#r-result2').hide();
+            $('#r-result2').show();
+            showMap2();
+        }
 
-            var lat, lng;
-            if (geo != '') {
-                $('#r-result').show();
-                lng = c.split(',')[0];
-                lat = c.split(',')[1];
-                showMap(lng, lat);
-            } else {
-                $('#r-result2').show();
-                showMap2();
-            }
+        function sinit() {
+            $('#r-result').hide();
+            $('#r-result2').hide();
+            map = new BMap.Map("l-map"); // 创建Map实例
+            getCoordinate();
         }
 
         function showMap(lng, lat) {
-            var map = new BMap.Map("l-map");
+            //var map = new BMap.Map("l-map");
             // 创建Map实例
             var point = new BMap.Point(lng, lat);
             // 创建点坐标
@@ -92,12 +124,12 @@
             //启用滚轮放大缩小
 
             map.addEventListener("click", showInfo);
-            
+
             $('#l-map').listview('refresh');
         }
 
         function showMap2() {
-            var map = new BMap.Map("l-map");            // 创建Map实例
+
             map.centerAndZoom(new BMap.Point(116.404, 39.915), 4);
 
             var local = new BMap.LocalSearch("全国", {
@@ -135,8 +167,13 @@
         function showInfo(e) {
             $('#lng').val(e.point.lng);
             $('#lat').val(e.point.lat);
-        }
+            //var map = new BMap.Map("l-map");
+            var marker1 = new BMap.Marker(new BMap.Point(e.point.lng, e.point.lat));  // 创建标注
+            map.addOverlay(marker1);              // 将标注添加到地图中
 
+            $('#zuobiao').val(e.point.lng + ',' + e.point.lat);
+            //alert($('#lng').val + $('#lat').val);
+        }
 
     </script>
 }
